--- a/eam/common/generator/src/main/resources/templates/form.html.vm
+++ b/eam/common/generator/src/main/resources/templates/form.html.vm
@@ -25,7 +25,7 @@
     #if(f.isUploadField)
 
     <div class="layui-form-item" #if(f.isHideInForm)style="display: none")#end>
-        <label class="layui-form-label" th:text="${lang.translate('#(f.label)')}">#(f.label)</label>
+        <label class="layui-form-label" th:text="${lang.translate('#(f.labelInForm)')}">#(f.labelInForm)</label>
         <div class="layui-upload layui-input-block">
             <input id="#(f.varName)"  name="#(f.varName)" lay-filter="#(f.varName)" style="display: none">
             <button type="button" class="layui-btn" id="#(f.varName)-button" th:text="${lang.translate('#(f.uploadField.buttonLabel)')}">#(f.uploadField.buttonLabel)</button>
@@ -37,7 +37,7 @@
 	#else if(f.isLogicField)
 	
     <div class="layui-form-item" #if(f.isHideInForm)style="display: none")#end>
-        <label class="layui-form-label" th:text="${lang.translate('#(f.label)')}">#(f.label)</label>
+        <label class="layui-form-label" th:text="${lang.translate('#(f.labelInForm)')}">#(f.labelInForm)</label>
         <div class="layui-input-block">
             <input type="checkbox" checked="" id="#(f.varName)"  name="#(f.varName)" lay-skin="switch" lay-filter="#(f.varName)" lay-text="#(f.logicField.labelOn)|#(f.logicField.labelOff)" value="#(f.logicField.valueOn)">
         </div>
@@ -46,7 +46,7 @@
 	#else if(f.isRadioField)
 	
     <div class="layui-form-item" #if(f.isHideInForm)style="display: none")#end>
-        <label class="layui-form-label" th:text="${lang.translate('#(f.label)')}">#(f.label)</label>
+        <label class="layui-form-label" th:text="${lang.translate('#(f.labelInForm)')}">#(f.labelInForm)</label>
         <div class="layui-input-block">
         	#if(f.radioField.dictCode!=null)
             <input type="radio" name="#(f.varName)" lay-filter="#(f.varName)" th:each="e,stat:${dict.toArray('#(f.radioField.dictCode)')}" th:value="${e.code}" th:title="${e.text}">
@@ -60,7 +60,7 @@
     #else if(f.isCheckField)
 
         <div class="layui-form-item" #if(f.isHideInForm)style="display: none")#end>
-            <label class="layui-form-label" th:text="${lang.translate('#(f.label)')}">#(f.label)</label>
+            <label class="layui-form-label" th:text="${lang.translate('#(f.labelInForm)')}">#(f.labelInForm)</label>
             <div class="layui-input-block">
                 #if(f.checkField.dictCode!=null)
                     <input type="checkbox" name="#(f.varName)" lay-filter="#(f.varName)" lay-skin="primary" th:each="e,stat:${dict.toArray('#(f.checkField.dictCode)')}" th:value="${e.code}" th:title="${e.text}">
@@ -74,16 +74,16 @@
     #else if(f.isMulitiLine)
     
         <div class="layui-form-item" #if(f.isHideInForm)style="display: none")#end>
-        <label class="layui-form-label" th:text="${lang.translate('#(f.label)')}">#(f.label)</label>
+        <label class="layui-form-label" th:text="${lang.translate('#(f.labelInForm)')}">#(f.labelInForm)</label>
         <div class="layui-input-block">
-            <textarea lay-filter="#(f.varName)" id="#(f.varName)" name="#(f.varName)" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('#(f.label)') }" class="layui-textarea" ></textarea>
+            <textarea lay-filter="#(f.varName)" id="#(f.varName)" name="#(f.varName)" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('#(f.labelInForm)') }" class="layui-textarea" ></textarea>
         </div>
     </div>
 
     #else if(f.isSelectField)
 
         <div class="layui-form-item" #if(f.isHideInForm)style="display: none")#end>
-            <label class="layui-form-label" th:text="${lang.translate('#(f.label)')}">#(f.label)</label>
+            <label class="layui-form-label" th:text="${lang.translate('#(f.labelInForm)')}">#(f.labelInForm)</label>
             <div class="layui-input-block">
                 <div id="#(f.varName)" th:data="#if(f.selectField.enumTypeName!=null)${enum.toArray('#(f.selectField.enumTypeName)')}#end#if(f.selectField.queryApi!=null)${'#(f.selectField.queryApi)'}#end#if(f.selectField.dictCode!=null)${dict.toArray('#(f.selectField.dictCode)')}#end"></div>
             </div>
@@ -92,14 +92,18 @@
     #else 
     
     <div class="layui-form-item" #if(f.isHideInForm)style="display: none")#end>
-        <label class="layui-form-label" th:text="${lang.translate('#(f.label)')}">#(f.label)</label>
+        <label class="layui-form-label" th:text="${lang.translate('#(f.labelInForm)')}">#(f.labelInForm)</label>
         <div class="layui-input-block">
-            <input lay-filter="#(f.varName)" id="#(f.varName)" name="#(f.varName)" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('#(f.label)') }" type="text" class="layui-input"  #if(f.validate!=null)  lay-verify="#if(f.validate.isRequired)|required#end#if(f.validate.isPhone)|phone#end#if(f.validate.isEmail)|email#end#if(f.validate.isUrl)|url#end#if(f.validate.isDate)|date#end#if(f.validate.isIdentity)|identity#end"  #end  />
+            <input lay-filter="#(f.varName)" id="#(f.varName)" name="#(f.varName)" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('#(f.labelInForm)') }" type="text" class="layui-input"  #if(f.validate!=null)  lay-verify="#if(f.validate.isRequired)|required#end#if(f.validate.isPhone)|phone#end#if(f.validate.isEmail)|email#end#if(f.validate.isUrl)|url#end#if(f.validate.isDate)|date#end#if(f.validate.isIdentity)|identity#end"  #end  />
         </div>
     </div>
     
 	#end
 	
+    #end
+
+    #if(formWindow.bottomSpace!=null)
+    <div style="height: #(formWindow.bottomSpace)px"></div>
     #end
 
     <div class="layui-form-item model-form-footer">
