--- a/eam/view/view-eam/src/main/resources/public/business/eam/brand/brand_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/brand/brand_list.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
  * 品牌 列表页 JS 脚本
- * @author 金杰 , maillank@qq.com
- * @since 2021-07-28 14:33:52
+ * @author 李方捷 , leefangjie@qq.com
+ * @since 2021-07-28 17:28:27
  */
  -->
  <!DOCTYPE html>
