--- a/eam/view/view-eam/src/main/resources/public/business/eam/maintainer/maintainer_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/maintainer/maintainer_list.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
- * 品牌 列表页 JS 脚本
+ * 维保厂商 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-07-29 15:34:43
+ * @since 2021-07-29 15:44:39
  */
  -->
  <!DOCTYPE html>
@@ -11,7 +11,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-    <title th:text="${lang.translate('品牌')}">品牌</title>
+    <title th:text="${lang.translate('维保厂商')}">维保厂商</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css"/>
     <link rel="stylesheet" href="/assets/css/admin.css"/>
@@ -28,12 +28,16 @@
 
             <div class="search-unit">
                 <span th:text="${lang.translate('名称')}" class="search-label">名称</span><span class="search-colon">:</span>
-                <input id="brandName" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入名称')}"/>
+                <input id="maintainerName" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入名称')}"/>
+            </div>
+            <div class="search-unit">
+                <span th:text="${lang.translate('备注')}" class="search-label">备注</span><span class="search-colon">:</span>
+                <input id="maintainerNotes" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入备注')}"/>
             </div>
 
             <button id="search-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i><span th:text="${lang.translate('搜索')}">搜索</span></button>
-            <button th:if="${perm.checkAuth('eam_brand:create')}" id="add-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('添加')}">添加</span></button>
-            <button th:if="${perm.checkAuth('eam_brand:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
+            <button th:if="${perm.checkAuth('eam_maintainer:create')}" id="add-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('添加')}">添加</span></button>
+            <button th:if="${perm.checkAuth('eam_maintainer:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
             
         </div>
 
@@ -48,17 +52,17 @@
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
-    <a th:if="${perm.checkAuth('eam_brand:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit" th:text="${lang.translate('修改')}">修改</a>
-    <a th:if="${perm.checkAuth('eam_brand:delete')}" class="layui-btn layui-btn-xs" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
+    <a th:if="${perm.checkAuth('eam_maintainer:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit" th:text="${lang.translate('修改')}">修改</a>
+    <a th:if="${perm.checkAuth('eam_maintainer:delete')}" class="layui-btn layui-btn-xs" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
 </script>
 
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
-    var AUTH_PREFIX="eam_brand";
+    var AUTH_PREFIX="eam_maintainer";
 </script>
 
-<script src="/business/eam/brand/brand_list.js"></script>
+<script src="/business/eam/maintainer/maintainer_list.js"></script>
 
 </body>
 </html>
