--- a/eam/view/view-eam/src/main/resources/public/business/eam/safetylevel/safetylevel_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/safetylevel/safetylevel_form.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
- * 品牌 列表页 JS 脚本
+ * 风险等级 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-07-29 15:34:45
+ * @since 2021-07-29 15:47:45
  */
  -->
  <!DOCTYPE html>
@@ -11,7 +11,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-	<title th:text="${lang.translate('品牌')}">品牌</title>
+	<title th:text="${lang.translate('风险等级')}">风险等级</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css"/>
     <link rel="stylesheet" href="/assets/css/admin.css"/>
@@ -25,9 +25,18 @@
     <input name="id" id="id"  type="hidden"/>
     
     <div class="layui-form-item" >
-        <label class="layui-form-label" th:text="${lang.translate('名称')}">名称</label>
+        <label class="layui-form-label" th:text="${lang.translate('风险等级编码')}">风险等级编码</label>
         <div class="layui-input-block">
-            <input lay-filter="brandName" id="brandName" name="brandName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('名称') }" type="text" class="layui-input"   />
+            <input lay-filter="safetyCode" id="safetyCode" name="safetyCode" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('风险等级编码') }" type="text" class="layui-input"   />
+        </div>
+    </div>
+    
+	
+    
+    <div class="layui-form-item" >
+        <label class="layui-form-label" th:text="${lang.translate('风险等级')}">风险等级</label>
+        <div class="layui-input-block">
+            <input lay-filter="safetyName" id="safetyName" name="safetyName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('风险等级') }" type="text" class="layui-input"   />
         </div>
     </div>
     
@@ -36,7 +45,7 @@
 
     <div class="layui-form-item model-form-footer">
         <button class="layui-btn layui-btn-primary" id="cancel-button" lay-filter="cancel-button" type="button" th:text="${lang.translate('取消')}">取消</button>
-        <button th:if="${perm.checkAnyAuth('eam_brand:create','eam_brand:update','eam_brand:save')}" class="layui-btn"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
+        <button th:if="${perm.checkAnyAuth('eam_safetylevel:create','eam_safetylevel:update','eam_safetylevel:save')}" class="layui-btn"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
     </div>
 </form>
 
@@ -45,7 +54,7 @@
 <script type="text/javascript" src="/assets/libs/pandyle.min.js"></script>
 <script type="text/javascript" src="/assets/libs/layui/layui.js"></script>
 
-<script src="/business/eam/brand/brand_form.js"></script>
+<script src="/business/eam/safetylevel/safetylevel_form.js"></script>
 
 </body>
 </html>
