--- a/eam/common/generator/src/main/resources/templates/form.js.vm
+++ b/eam/common/generator/src/main/resources/templates/form.js.vm
@@ -86,12 +86,14 @@ function FormPage() {
 		fox.renderSelectBox({
 			el: "#(f.varName)",
 			radio: #(!f.selectField.muliti),
-			filterable: true,
+			filterable: #(f.selectField.filter),
 			#if(f.selectField.paging)
 			paging: true,
 			pageRemote: true,
 			#end
+			#if(f.selectField.toolbar)
 			toolbar: {show:true,showIcon:true,list:[ "ALL", "CLEAR","REVERSE"]},
+			#end
 			//转换数据
 			#if(f.selectField.enumTypeName!=null)
 			transform:function(data) {
@@ -105,8 +107,10 @@ function FormPage() {
 			}
 			#end
 			#if(f.selectField.queryApi!=null)
-			searchField: "name", //请自行调整用于搜索的字段名称
+			#if(f.selectField.filter)
+			searchField: "#(f.selectField.textField))", //请自行调整用于搜索的字段名称
 			extraParam: {}, //额外的查询参数，Object 或是 返回 Object 的函数
+			#end
 			transform: function(data) {
 				//要求格式 :[{name: '水果', value: 1},{name: '蔬菜', value: 2}]
 				var opts=[];
@@ -165,11 +169,7 @@ function FormPage() {
 			var #(f.varName)Select=xmSelect.get("##(f.varName)",true);
 			var #(f.varName)Opionts=[];
 			if (formData.#(f.selectField.fillBy))	{
-				#if(f.selectField.muliti)
-				#(f.varName)Opionts=#(f.varName)Select.options.transform(formData.#(f.selectField.fillBy));
-				#else
 				#(f.varName)Opionts=#(f.varName)Select.options.transform([formData.#(f.selectField.fillBy)]);
-				#end
 			}
 			#(f.varName)Select.setValue(#(f.varName)Opionts);
 			#end
