--- a/eam/common/generator/src/main/resources/templates/list.js.vm
+++ b/eam/common/generator/src/main/resources/templates/list.js.vm
@@ -68,6 +68,12 @@ function ListPage() {
 				#end
 				#elseif(f.isLogicField)
 				{ field: '#(f.varName)', align:"#(f.alignInList)", hide:#(f.isHideInList), sort: true, title: fox.translate('#(f.labelInList)'), templet: '#cell-tpl-#(f.varName)'} ,
+				#elseif(f.isSelectField)
+				#if(f.selectField.enumTypeName!=null)
+				{ field: '#(f.varName)', align:"#(f.alignInList)", hide:#(f.isHideInList), sort: true, title: fox.translate('#(f.labelInList)')} ,
+				#else
+				{ field: '#(f.varName)', align:"#(f.alignInList)", hide:#(f.isHideInList), sort: true, title: fox.translate('#(f.labelInList)'), templet: function (d) { return fox.joinLabel(d.#(f.selectField.fillBy),"#(f.selectField.textField)");}} ,
+				#end
 				#else
                 { field: '#(f.varName)', align:"#(f.alignInList)", hide:#(f.isHideInList), sort: true, title: fox.translate('#(f.labelInList)')} ,
 				#end
@@ -112,6 +118,8 @@ function ListPage() {
 		#if(f.isLogicField)
 		value.#(f.varName)={ value: xmSelect.get("##(f.varName)",true).getValue("value") };
 		#else if(f.isRadioField)
+		value.#(f.varName)={ value: xmSelect.get("##(f.varName)",true).getValue("value") };
+		#else if(f.isSelectField)
 		value.#(f.varName)={ value: xmSelect.get("##(f.varName)",true).getValue("value") };
 		#else if(f.isDateField)
 		value.#(f.varName)={ begin: $("##(f.varName)-begin").val(), end: $("##(f.varName)-end").val() };
@@ -226,7 +234,61 @@ function ListPage() {
 			laydate.render({
 				elem: '##(f.varName)-end'
 			});
-		#end
+		#else if(f.isSelectField)
+		//渲染 #(f.varName) 下拉字段
+		fox.renderSelectBox({
+			el: "#(f.varName)",
+			radio: #(!f.selectField.muliti),
+			size: "small",
+			filterable: #(f.selectField.filter),
+			#if(f.selectField.paging)
+				paging: true,
+				pageRemote: true,
+			#end
+			#if(f.selectField.toolbar)
+			toolbar: {show:true,showIcon:true,list:["CLEAR","REVERSE"]},
+			#end
+			//转换数据
+			#if(f.selectField.enumTypeName!=null)
+			transform:function(data) {
+				//要求格式 :[{name: '水果', value: 1},{name: '蔬菜', value: 2}]
+				var opts=[];
+				if(!data) return opts;
+				for (var i = 0; i < data.length; i++) {
+					opts.push({name:data[i].#(f.selectField.textField),value:data[i].#(f.selectField.valueField)});
+				}
+				return opts;
+			}
+			#end
+			#if(f.selectField.queryApi!=null)
+			#if(f.selectField.filter)
+			searchField: "#(f.selectField.textField))", //请自行调整用于搜索的字段名称
+			extraParam: {}, //额外的查询参数，Object 或是 返回 Object 的函数
+			#end
+			transform: function(data) {
+				//要求格式 :[{name: '水果', value: 1},{name: '蔬菜', value: 2}]
+				var opts=[];
+				if(!data) return opts;
+				for (var i = 0; i < data.length; i++) {
+					if(!data[i]) continue;
+					opts.push({name:data[i].#(f.selectField.textField),value:data[i].#(f.selectField.valueField)});
+				}
+				return opts;
+			}
+			#end
+			#if(f.selectField.dictCode!=null)
+			transform: function(data) {
+				//要求格式 :[{name: '水果', value: 1},{name: '蔬菜', value: 2}]
+				var opts=[];
+				for (var i = 0; i < data.length; i++) {
+					if(!data[i]) continue;
+					opts.push({name:data[i].#(f.selectField.textField),value:data[i].#(f.selectField.valueField)});
+				}
+				return opts;
+			}
+			#end
+		});
+	#end
 	#end
 	#end
 	}
