--- a/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_form.html
+++ b/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_form.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
  * 机柜管理 列表页 JS 脚本
- * @author 金杰 , maillank@qq.com
- * @since 2021-07-30 14:59:22
+ * @author 李方捷 , leefangjie@qq.com
+ * @since 2021-07-30 15:46:16
  */
  -->
  <!DOCTYPE html>
@@ -23,14 +23,14 @@
 
 <form id="data-form" lay-filter="data-form" class="layui-form model-form" style="display:none">
     <input name="id" id="id"  type="hidden"/>
-    
-    <div class="layui-form-item" >
-        <label class="layui-form-label" th:text="${lang.translate('数据中心')}">数据中心</label>
-        <div class="layui-input-block">
-            <input lay-filter="dcId" id="dcId" name="dcId" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('数据中心') }" type="text" class="layui-input"   />
+
+        <div class="layui-form-item" >
+            <label class="layui-form-label" th:text="${lang.translate('数据中心')}">数据中心</label>
+            <div class="layui-input-block">
+                <div id="dcId" th:data="${'/service-datacenter/dc-info/query-list'}"></div>
+            </div>
         </div>
-    </div>
-    
+
 	
     
     <div class="layui-form-item" >
