--- a/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_list.html
+++ b/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_list.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
  * 机柜管理 列表页 JS 脚本
- * @author 金杰 , maillank@qq.com
- * @since 2021-07-30 14:59:21
+ * @author 李方捷 , leefangjie@qq.com
+ * @since 2021-07-30 15:46:16
  */
  -->
  <!DOCTYPE html>
@@ -32,7 +32,7 @@
             </div>
             <div class="search-unit">
                 <span th:text="${lang.translate('数据中心')}" class="search-label">数据中心</span><span class="search-colon">:</span>
-                <input id="dcId" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入数据中心')}"/>
+                <div id="dcId" th:data="${'/service-datacenter/dc-info/query-list'}" style="width:140px"></div>
             </div>
             <div class="search-unit">
                 <span th:text="${lang.translate('编码')}" class="search-label">编码</span><span class="search-colon">:</span>
