--- a/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_form.html
+++ b/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_form.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
  * 机柜管理 列表页 JS 脚本
- * @author 李方捷 , leefangjie@qq.com
- * @since 2021-07-30 15:46:16
+ * @author 金杰 , maillank@qq.com
+ * @since 2021-07-30 16:52:51
  */
  -->
  <!DOCTYPE html>
@@ -28,6 +28,15 @@
             <label class="layui-form-label" th:text="${lang.translate('数据中心')}">数据中心</label>
             <div class="layui-input-block">
                 <div id="dcId" th:data="${'/service-datacenter/dc-info/query-list'}"></div>
+            </div>
+        </div>
+
+	
+
+        <div class="layui-form-item" >
+            <label class="layui-form-label" th:text="${lang.translate('所属区域')}">所属区域</label>
+            <div class="layui-input-block">
+                <div id="areaId" th:data="${'/service-datacenter/dc-rack-area/query-list'}"></div>
             </div>
         </div>
 
