--- a/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_list.html
+++ b/eam/view/view-datacenter/src/main/resources/public/business/datacenter/rack/rack_list.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
  * 机柜管理 列表页 JS 脚本
- * @author 李方捷 , leefangjie@qq.com
- * @since 2021-07-30 15:46:16
+ * @author 金杰 , maillank@qq.com
+ * @since 2021-07-30 16:52:51
  */
  -->
  <!DOCTYPE html>
@@ -27,12 +27,12 @@
         <div class="layui-form toolbar search-bar">
 
             <div class="search-unit">
-                <span th:text="${lang.translate('主键')}" class="search-label">主键</span><span class="search-colon">:</span>
-                <input id="id" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入主键')}"/>
-            </div>
-            <div class="search-unit">
                 <span th:text="${lang.translate('数据中心')}" class="search-label">数据中心</span><span class="search-colon">:</span>
                 <div id="dcId" th:data="${'/service-datacenter/dc-info/query-list'}" style="width:140px"></div>
+            </div>
+            <div class="search-unit">
+                <span th:text="${lang.translate('所属区域')}" class="search-label">所属区域</span><span class="search-colon">:</span>
+                <div id="areaId" th:data="${'/service-datacenter/dc-rack-area/query-list'}" style="width:140px"></div>
             </div>
             <div class="search-unit">
                 <span th:text="${lang.translate('编码')}" class="search-label">编码</span><span class="search-colon">:</span>
@@ -41,10 +41,6 @@
             <div class="search-unit">
                 <span th:text="${lang.translate('名称')}" class="search-label">名称</span><span class="search-colon">:</span>
                 <input id="rackName" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入名称')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('容量')}" class="search-label">容量</span><span class="search-colon">:</span>
-                <input id="rackCaptical" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入容量')}"/>
             </div>
             <div class="search-unit">
                 <span th:text="${lang.translate('标签')}" class="search-label">标签</span><span class="search-colon">:</span>
