--- a/eam/view/view-eam/src/main/resources/public/business/eam/goods/goods_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/goods/goods_list.html
@@ -2,7 +2,7 @@
 /**
  * 物品档案 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-01 20:08:50
+ * @since 2021-08-01 20:52:07
  */
  -->
  <!DOCTYPE html>
@@ -37,12 +37,8 @@
                 <input id="name" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入物品名称')}"/>
             </div>
             <div class="search-unit">
-                <span th:text="${lang.translate('规格')}" class="search-label">规格</span><span class="search-colon">:</span>
-                <input id="model" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入规格')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('标准型号物品图片')}" class="search-label">标准型号物品图片</span><span class="search-colon">:</span>
-                <input id="pictureId" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入标准型号物品图片')}"/>
+                <span th:text="${lang.translate('规格型号')}" class="search-label">规格型号</span><span class="search-colon">:</span>
+                <input id="model" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入规格型号')}"/>
             </div>
             <div class="search-unit">
                 <span th:text="${lang.translate('备注')}" class="search-label">备注</span><span class="search-colon">:</span>
@@ -73,7 +69,7 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
-    var RADIO_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.GoodsStauts')}]];
+    var RADIO_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.GoodsStautsEnum')}]];
     var AUTH_PREFIX="eam_goods";
 </script>
 
