--- a/eam/view/view-eam/src/main/resources/public/business/eam/goods/goods_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/goods/goods_list.html
@@ -2,7 +2,7 @@
 /**
  * 物品档案 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-01 20:52:07
+ * @since 2021-08-05 14:57:32
  */
  -->
  <!DOCTYPE html>
@@ -30,7 +30,7 @@
                 <span th:text="${lang.translate('状态')}" class="search-label">状态</span><span class="search-colon">:</span>
 
 
-                <div id="status" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.GoodsStauts')}" style="width:140px"></div>
+                <div id="status" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.GoodsStautsEnum')}" style="width:140px"></div>
             </div>
             <div class="search-unit">
                 <span th:text="${lang.translate('物品名称')}" class="search-label">物品名称</span><span class="search-colon">:</span>
