--- a/eam/view/view-common/src/main/resources/public/business/common/code_allocation/code_allocation_form.html
+++ b/eam/view/view-common/src/main/resources/public/business/common/code_allocation/code_allocation_form.html
@@ -2,7 +2,7 @@
 /**
  * 编码分配 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-08 08:48:18
+ * @since 2021-08-08 12:19:33
  */
  -->
  <!DOCTYPE html>
@@ -23,23 +23,23 @@
 
 <form id="data-form" lay-filter="data-form" class="layui-form model-form" style="display:none">
     <input name="id" id="id"  type="hidden"/>
-    
-    <div class="layui-form-item" >
-        <label class="layui-form-label" th:text="${lang.translate('所属模块')}">所属模块</label>
-        <div class="layui-input-block">
-            <input lay-filter="module" id="module" name="module" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('所属模块') }" type="text" class="layui-input"   />
+
+        <div class="layui-form-item" >
+            <label class="layui-form-label" th:text="${lang.translate('业务模块')}">业务模块</label>
+            <div class="layui-input-block">
+                <div id="module" th:data="${enum.toArray('com.dt.platform.constants.enums.common.CodeModuleEnum')}"></div>
+            </div>
         </div>
-    </div>
-    
+
 	
-    
-    <div class="layui-form-item" >
-        <label class="layui-form-label" th:text="${lang.translate('所属模块')}">所属模块</label>
-        <div class="layui-input-block">
-            <input lay-filter="ruleId" id="ruleId" name="ruleId" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('所属模块') }" type="text" class="layui-input"   />
+
+        <div class="layui-form-item" >
+            <label class="layui-form-label" th:text="${lang.translate('编码规则')}">编码规则</label>
+            <div class="layui-input-block">
+                <div id="ruleId" th:data="${'/service-common/sys-code-rule/query-paged-list'}"></div>
+            </div>
         </div>
-    </div>
-    
+
 	
     
     <div class="layui-form-item" >
