--- a/eam/view/view-common/src/main/resources/public/business/common/code_attr/code_attr_form.html
+++ b/eam/view/view-common/src/main/resources/public/business/common/code_attr/code_attr_form.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
- * 编码分配属性 列表页 JS 脚本
+ * 编码属性 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-07 22:35:52
+ * @since 2021-08-08 11:02:25
  */
  -->
  <!DOCTYPE html>
@@ -11,7 +11,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-	<title th:text="${lang.translate('编码分配属性')}">编码分配属性</title>
+	<title th:text="${lang.translate('编码属性')}">编码属性</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css"/>
     <link rel="stylesheet" href="/assets/css/admin.css"/>
@@ -24,7 +24,7 @@
 <form id="data-form" lay-filter="data-form" class="layui-form model-form" style="display:none">
     <input name="id" id="id"  type="hidden"/>
     
-    <div class="layui-form-item" >
+    <div class="layui-form-item" style="display: none")>
         <label class="layui-form-label" th:text="${lang.translate('占位符')}">占位符</label>
         <div class="layui-input-block">
             <input lay-filter="code" id="code" name="code" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('占位符') }" type="text" class="layui-input"   />
