--- a/eam/view/view-common/src/main/resources/public/business/common/code_attr/code_attr_list.html
+++ b/eam/view/view-common/src/main/resources/public/business/common/code_attr/code_attr_list.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
- * 编码分配属性 列表页 JS 脚本
+ * 编码属性 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-07 22:35:50
+ * @since 2021-08-08 11:02:24
  */
  -->
  <!DOCTYPE html>
@@ -11,7 +11,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-    <title th:text="${lang.translate('编码分配属性')}">编码分配属性</title>
+    <title th:text="${lang.translate('编码属性')}">编码属性</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css"/>
     <link rel="stylesheet" href="/assets/css/admin.css"/>
@@ -26,10 +26,6 @@
     <div class="layui-card-body">
         <div class="layui-form toolbar search-bar">
 
-            <div class="search-unit">
-                <span th:text="${lang.translate('占位符')}" class="search-label">占位符</span><span class="search-colon">:</span>
-                <input id="code" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入占位符')}"/>
-            </div>
             <div class="search-unit">
                 <span th:text="${lang.translate('编码名称')}" class="search-label">编码名称</span><span class="search-colon">:</span>
                 <input id="name" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入编码名称')}"/>
